<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMeal">

    <EditText
        android:id="@+id/meal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:hint="@string/meal_title"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/meal_mainIngr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:hint="@string/meal_main_ingedient"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_title" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:layout_marginStart="5dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/meal_datetime">-->

    <!--&lt;!&ndash;        <View&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="5dp"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:background="@color/orange" />&ndash;&gt;-->

    <!--        -->

    <!--    </LinearLayout>-->


    <LinearLayout
        android:id="@+id/proteinsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/carbsLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/ltorange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/proteinCounterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/proteinValue" />

            <TextView
                android:id="@+id/proteinCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/sampleValue"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proteincounterLabel" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/carbsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/fatsLayout"
        app:layout_constraintStart_toEndOf="@+id/proteinsLayout"
        app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/ltorange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carbohydratesCounterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/ltorange"
                android:text="@string/carbohydratesValue"
                app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/carbohydratesCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/sampleValue"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbohydratesCounterLabel" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fatsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/carbsLayout"
        app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/ltorange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fatCounterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fatValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/carbohydratesCounter"
                app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr" />

            <TextView
                android:id="@+id/fatCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/sampleValue"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/carbohydratesCounter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meal_mainIngr" />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/meal_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:hint="@string/meal_description"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/carbsLayout" />

    <TextView
        android:id="@+id/ingredients_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/ingredients_list_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_desc" />

    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:hint="@string/ingredients_list"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_list_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addIngredientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ltorange"
        android:text="+"
        android:textColor="@color/ltblack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMealDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMealDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>